GNOME Bugzilla – Bug 707498
ellipsis instead of three dots
Last modified: 2013-09-10 08:17:18 UTC
Please use ellipsis instead of three dots in this strings #: ../src/tracker-needle/tracker-view.vala:369 msgid "Loading..." #: ../src/tracker-needle/tracker-view.vala:459 msgid "_Tags..."
commit c63ab5cc3ed20f2ec261928e4342c9b57ce98cd7 Author: Martyn Russell <martyn@lanedo.com> Date: Tue Sep 10 09:16:07 2013 +0100 tracker-needle, tracker-search: Use ellipsis instead of three dots https://bugzilla.gnome.org/show_bug.cgi?id=707498