tracker-needle, tracker-search: Use ellipsis instead of three dots

https://bugzilla.gnome.org/show_bug.cgi?id=707498