src/tracker-needle/tracker-view.vala
@@ -366,7 +366,7 @@ public class Tracker.View : ScrolledWindow {
 					markup += "\n<small><span color='grey'>%s</span></small>".printf (Markup.escape_text (subtext));
 				}
 			} else {
-				markup = "<span color='grey'>%s</span>\n".printf (_("Loading..."));
+				markup = "<span color='grey'>%s</span>\n".printf (_("Loading…"));
 			}
 		}
 
@@ -456,7 +456,7 @@ public class Tracker.View : ScrolledWindow {
 		var separator = new SeparatorMenuItem ();
 		context_menu.append (separator);
 
-		item = new Gtk.MenuItem.with_mnemonic (_("_Tags..."));
+		item = new Gtk.MenuItem.with_mnemonic (_("_Tags…"));
 		item.activate.connect (context_menu_tags_clicked);
 		context_menu.append (item);
 
